[gd_scene load_steps=13 format=3 uid="uid://dfpisimsgf5ce"]

[ext_resource type="Script" uid="uid://0gfgixhikw1y" path="res://objects/coin.gd" id="2_gaakh"]
[ext_resource type="PackedScene" uid="uid://c1k4vb0pi57dh" path="res://Peppermint_candy.glb" id="3_1o7s2"]
[ext_resource type="Texture2D" uid="uid://bs6puxrivhkk2" path="res://sprites/particle.png" id="3_xl1k0"]
[ext_resource type="PackedScene" uid="uid://dorc5tlqcqevx" path="res://mum_tscn/vegeteble.tscn" id="4_iwokp"]

[sub_resource type="SphereShape3D" id="SphereShape3D_bnkeq"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6hm51"]
transparency = 1
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("3_xl1k0")
billboard_mode = 1
billboard_keep_scale = true
proximity_fade_enabled = true

[sub_resource type="Gradient" id="Gradient_7tsk2"]
colors = PackedColorArray(0.996094, 0.910156, 0.351563, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_1o7s2"]
gradient = SubResource("Gradient_7tsk2")

[sub_resource type="Curve" id="Curve_6a7l3"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.504298, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_iwokp"]
curve = SubResource("Curve_6a7l3")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_hyi47"]
direction = Vector3(1, 1, 1)
spread = 180.0
initial_velocity_max = 1.0
gravity = Vector3(0, 0, 0)
damping_min = 0.5
damping_max = 0.5
scale_min = 0.15
scale_max = 0.15
scale_curve = SubResource("CurveTexture_iwokp")
color_ramp = SubResource("GradientTexture1D_1o7s2")

[sub_resource type="QuadMesh" id="QuadMesh_744xy"]

[node name="coin" type="Area3D"]
script = ExtResource("2_gaakh")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("SphereShape3D_bnkeq")

[node name="Particles" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.447834, 0)
material_override = SubResource("StandardMaterial3D_6hm51")
fixed_fps = 0
process_material = SubResource("ParticleProcessMaterial_hyi47")
draw_pass_1 = SubResource("QuadMesh_744xy")

[node name="Peppermint_candy" parent="." instance=ExtResource("3_1o7s2")]
transform = Transform3D(-1.35505e-08, -0.31, -1.35505e-08, 0, -1.35505e-08, 0.31, -0.31, 1.35505e-08, 5.92313e-16, -0.0257956, 0.485019, -0.0363113)
visible = false

[node name="vegeteble" parent="." instance=ExtResource("4_iwokp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.273216, 0)

[node name="GlowLight" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.158862, 0.646181, 0)
light_color = Color(0.83, 0, 0, 1)
light_energy = 4.808
omni_range = 3.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
